# weixin-reader-desktop

./: .gitignore  LICENSE  README.md  index.html  package.json
docs/: EVENT_BUS_REFACTOR.md  PLUGIN_ARCHITECTURE.md  TESTING.md
e2e/: README.md  test-page.html
e2e/tests/: test_reader_features.py  test_tauri_core.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  weread-api.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  monitor.rs  settings.rs  sites.rs  update.rs
src-tauri/tests/: README.md  commands_test.rs  core_test.rs  menu_test.rs  monitor_test.rs  performance_test.rs  settings_test.rs  sites_test.rs  update_test.rs
src/plugins/: index.ts
src/plugins/builtin/: index.ts
src/plugins/builtin/weread/: index.ts  manifest.json
src/plugins/template/: index.ts  manifest.json
src/scripts/: clear_release.ts  debug.ts  inject.js  inject.ts  probe.ts  release.ts  sync_version.ts
src/scripts/adapters/: index.ts  progress_tracker.ts  reading_site_adapter.ts  weread_adapter.ts
src/scripts/core/: base_manager.ts  chapter_manager.ts  event_bus.ts  logger.ts  optimistic_lock.ts  plugin_api.ts  plugin_loader.ts  plugin_registry.ts  plugin_types.ts  scroll_state.ts  settings_store.ts  site_context.ts  site_registry.ts  tauri.ts  toast.ts  utils.ts
src/scripts/managers/: app_manager.ts  ipc_manager.ts  menu_manager.ts  remote_manager.ts  setting_manager.ts  style_manager.ts  theme_manager.ts  turner_manager.ts
src/scripts/utils/: chapter.ts  page_scroller.ts
src/windows/: about.html  settings.html  update.html
(+16 files in other folders)
