[package]
name = "weixin-reader"
version = "0.7.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "weixin-reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weixin_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
log = "0.4"
tauri-plugin-http = { version = "2.5.4", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation-sys = "0.3"

[[bin]]
name = "weixin-reader"
path = "src/main.rs"

[profile.release]
panic = "abort" # Strip panic unwind tables
codegen-units = 1 # Compile all in one unit for better optimization
lto = true # Enable Link Time Optimization
opt-level = "z" # Optimize for size
strip = true # Strip symbols from binary

